--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 DATABASE_URL="mongodb+srv://toDoAppUser:qwerty123@cluster1.lzcra.mongodb.net/PoemDB?retryWrites=true&w=majority"
-NEXTAUTH_SECRET="your_nextauth_secret"
-OPENAI_API_KEY="your_openai_api_key"
+NEXTAUTH_SECRET="NextJS is best!"
 NEXTAUTH_URL="http://localhost:3000"
