--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "lucide-react": "^0.454.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
-    "openai": "^4.24.1",
+    "openai": "^4.71.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
